basic html website

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jean Dupont | Développeur Frontend - Portfolio</title>
-    <meta name="description" content="Portfolio de Jean Dupont, développeur Frontend spécialisé en HTML propre et accessible. Découvrez mes projets et mon parcours.">
+    <title> ASMA Développeur Frontend - Portfolio</title>
+    <meta name="description" content="Portfolio de ASMA, développeur Frontend spécialisé en HTML propre et accessible. ">
     <meta name="keywords" content="Frontend, Développeur, HTML, Portfolio, Projets Web">
 </head>
 <body>
@@ -15,7 +15,9 @@
             <ul style="display: inline; list-style: none;">
                 <li style="display: inline;"><a href="index.html">Home</a> /</li>
                 <li style="display: inline;"><a href="projects.html">Projects</a> /</li>
-                <li style="display: inline;"><a href="contact.html">Contact</a></li>
+                <li style="display: inline;"><a href="articles.html">Articles</a> /</li>
+                 <li style="display: inline;"><a href="contacts.html">Contacts</a> /</li>
+                
             </ul>
         </nav>
         <hr>
